--- a/index.css
+++ b/index.css
@@ -62,6 +62,13 @@ body {
   }
 }
 
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 @media (max-width: 768px) {
   input,
   textarea,
